--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
 
     /* Emit */
     "declaration": true,
-    "emitDeclarationOnly": true,
+    "emitDeclarationOnly": false,
     "experimentalDecorators": true,
     "sourceMap": true,
     "outDir": "./dist",
